Fix layouts on iOS Safari

--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -1,3 +1,4 @@
 .content {
   padding: var(--edge-padding-v) var(--edge-padding-h);
+  height: 100%;
 }
