--- a/src/components/IndexPage.module.css
+++ b/src/components/IndexPage.module.css
@@ -46,7 +46,7 @@
 }
 
 .sectionPhotos {
-  padding-top: 5rem;
+  padding: 5rem 0;
 }
 
 .gridLayout {
